# joayo

./: .bazelignore  .bazelrc  .gitignore  MODULE.bazel  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
joayo-backend/: .gitignore  BUILD.bazel  Cargo.toml
joayo-backend/api/: BUILD.bazel  Cargo.toml
joayo-backend/api/api_derive/: BUILD.bazel  Cargo.toml
joayo-backend/api/api_derive/src/: lib.rs
joayo-backend/api/src/: lib.rs  server_result.rs
joayo-backend/api/src/common/: image.rs  mod.rs  session.rs
joayo-backend/api/src/entities/: mod.rs  password_identity.rs  prelude.rs  session.rs  user.rs
joayo-backend/api/src/joayo/: create_joayo.rs  mod.rs
joayo-backend/api/src/migration/: m20240822_184236_create_user.rs  m20240822_184335_create_password_identity.rs  mod.rs
joayo-backend/api/src/user/: change_password.rs  check_session.rs  create_user.rs  delete_session.rs  get_session.rs  mod.rs
joayo-backend/api/tests/: db_integration_test.rs
joayo-backend/cron/: Cargo.toml
joayo-backend/cron/src/: lib.rs
joayo-backend/orm/: Cargo.toml
joayo-backend/orm/src/: lib.rs
joayo-backend/orm/src/entities/: joayo.rs  mod.rs  password_identity.rs  prelude.rs  upload_result.rs  user.rs
joayo-backend/orm/src/migration/: m20240822_184236_create_user.rs  m20240822_184335_create_password_identity.rs  m20240823_150240_create_session.rs  m20240903_094146_create_joayo.rs  m20240903_150838_create_upload_result.rs  mod.rs
joayo-backend/service/: Cargo.toml
joayo-backend/service/src/: aws.rs  encode.rs  ffmpeg.rs  image.rs  lib.rs  s3.rs
joayo-backend/src/: main.rs
joayo-frontend/: BUILD.bazel  package.json  vite.config.ts
joayo-frontend/static/: BUILD.bazel
joayo-typespec/: .gitignore  main.tsp  overview.md  package-lock.json  package.json  stoplight.html
joayo-typespec/common/: server_error.tsp  session_error.tsp
joayo-typespec/src/: change_password.tsp  check_session.tsp  create_user.tsp  delete_session.tsp  get_session.tsp
joayo-typespec/tsp-output/@typespec/openapi3/: openapi.yaml
