[package]
name = "joayo-backend"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "api", "api/api_derive", "cron"]

[dependencies]
api = {path = "api"}
cron = {path = "cron"}
tokio = { version = "1.39.3", features = ["full"] }
proc-macro2 = "1.0.86"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
