[package]
name = "joayo-backend"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "api", "api/api_derive", "service"]

[dependencies]
api = {path = "api"}
service = {path = "service"}
tokio = { version = "1.39.3", features = ["full"] }
proc-macro2 = "1.0.86"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
bytes = "1.7.1"
