load("@npm//:defs.bzl", "npm_link_all_packages")
load("@npm//joayo-frontend:vite/package_json.bzl", vite_bin = "bin")

npm_link_all_packages(name = "node_modules")

filegroup(
	name = "project",
	srcs = glob([
		"src/**/*.ts",
		"src/**/*.svelte",
		"src/**/*.html",
	]),
)

SRCS = [
	"project",
	"//joayo-frontend/static",
	"svelte.config.js",
	"vite.config.ts",
	"tsconfig.json",
	"package.json",
]

BUILD_DEPS = [":node_modules/" + d for d in [
	"@sveltejs/adapter-auto",
	"@sveltejs/kit",
	"@sveltejs/vite-plugin-svelte",
	"svelte",
	"svelte-check",
	"typescript",
	"vite",
]]

vite_bin.vite(
	name = "joayo-frontend",
	srcs = SRCS + BUILD_DEPS,
	args = ["build"],
	chdir = package_name(),
	out_dirs = ["dist"],
	visibility = ["//visibility:public"],
)
