load("@aspect_rules_js//js:defs.bzl", "js_run_binary")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@npm//joayo-frontend:vite/package_json.bzl", vite_bin = "bin")

npm_link_all_packages(name = "node_modules")

SRCS = glob(["src/**/*"]) + [
	"//joayo-frontend/static",
	"svelte.config.js",
	"vite.config.ts",
	"tsconfig.json",
	"package.json",
]

# build file is in bazel-bin/joayo-frontend/build_/build.runfiles/_main/joayo-frontend/.svelte-kit
vite_bin.vite_binary(
	name = "build",
	chdir = package_name(),
	args = ["build"],
	data = SRCS + [":node_modules"],
)

vite_bin.vite_binary(
	name = "dev",
	chdir = package_name(),
	args = ["dev"],
	data = SRCS + [":node_modules"]
)

vite_bin.vite_binary(
	name = "preview",
	chdir = package_name(),
	args = ["dev"],
	data = SRCS + [":node_modules"]
)

vite_bin.vite_binary(
	name = "vite",
	chdir = package_name(),
	data = ["vite.config.ts"],
)
