[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
api_derive = { path = "./api_derive" }
argon2 = "0.5.3"
axum = { version = "0.7.5" }
axum-extra = { version = "0.9.3", features = ["cookie", "typed-header"] }
chrono = "0.4.38"
sea-orm = { version = "1.0.0", features = ["sqlx-postgres", "runtime-tokio-rustls"] } 
sea-orm-migration = "1.0.0"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
tokio = { version = "1.39.3", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.10.0", features = ["v4", "v7", "fast-rng", "macro-diagnostics"] }
