[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
api_derive = { path = "./api_derive" }
orm = { path = "../orm" }
service = { path = "../service" }
argon2 = "0.5.3"
axum = { version = "0.7.5" }
axum-extra = { version = "0.9.3", features = ["cookie", "typed-header", "multipart"] }
axum-macros = "0.4.1"
axum_typed_multipart = "0.12.1"
bytes = "1.7.1"
chrono = "0.4.38"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
headers = "0.4.0"
rand = "0.8.5"
sea-orm = { version = "1.0.0", features = ["sqlx-postgres", "runtime-tokio-rustls"] } 
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
thiserror = "1.0.63"
tokio = { version = "1.39.3", features = ["full"] }
tower-http = { version = "0.5.2", features = ["timeout"] }
tracing = "0.1.40"
uuid = { version = "1.10.0", features = ["v4", "v7", "fast-rng", "macro-diagnostics"] }
