[package]
name = "service"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.7.1"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
libavif = "0.14.0"
tokio = { version = "1.39.3", features = ["full"] }
tracing = "0.1.40"
uuid = { version = "1.10.0", features = ["v7"] }
