[package]
name = "service"
version = "0.1.0"
edition = "2021"

[dependencies]
orm = { path = "../orm" }
async-scoped = { version = "0.9.0", features = ["tokio", "use-tokio"] }
aws-config = "1.5.5"
aws-sdk-s3 = "1.47.0"
aws-smithy-runtime = { version = "1.7.1", features = ["rt-tokio"] }
aws-smithy-types = "1.2.4"
bytes = "1.7.1"
config = "0.14.0"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
sea-orm = { version = "1.0.0", features = ["sqlx-postgres", "runtime-tokio-rustls"] } 
hyper = { version = "1.4.1", features = ["client"] }
hyper-rustls = { version = "0.27.2", features = ["ring", "http2", "webpki-roots", "webpki-tokio"] }
libavif = "0.14.0"
tokio = { version = "1.39.3", features = ["full"] }
tracing = "0.1.40"
uuid = { version = "1.10.0", features = ["v7"] }
